# gpu_performance_api

./: .clang-format  .gitignore  .gitmodules  .reviewboardrc  BUILD.md  CMakeLists.txt  CMakeSettings.json  ComputerSoftwar READ.me stale.yml  LICENSE  LICENSE.txt  NOTICES.txt  PreBuild.py  PreBuildCMakeCommon.py  README.md  RELEASE_NOTES.txt  ReleaseNotes.md
Common/: README.md
Src/GPUPerfAPI-Common/: APIRTModuleLoader.h  Adapter.cpp  Adapter.h  CMakeLists.txt  CircularBuffer.h  DXGetAMDDeviceInfo.h  GPACommandList.cpp  GPACommandList.h  GPACommonDefs.h  GPAContext.cpp  GPAContext.h  GPAContextCounterMediator.cpp  GPAContextCounterMediator.h  GPAContextState.cpp  GPAContextState.h  GPACounterDataRequestManager.h  GPACustomHWValidationManager.cpp  GPACustomHWValidationManager.h  GPADataRequest.h  GPAFunctions.h  GPAHWInfo.cpp  GPAHWInfo.h  GPAImplementor.cpp  GPAImplementor.h  GPAInterfaceLoader.h  GPAPass.cpp  GPAPass.h  GPAProfiler.cpp  GPAProfiler.h  GPASample.cpp  GPASample.h  GPASession.cpp  GPASession.h  GPASessionRequests.cpp  GPASessionRequests.h  GPAUniqueObject.cpp  GPAUniqueObject.h  GPAVersion.h  GPUPerfAPI-HSA.h  GPUPerfAPI-ROCm.h  (+19 more)
Src/GPUPerfAPICL/: CLCounterDataRequest.cpp  CLCounterDataRequest.h  CLGPACommandList.cpp  CLGPACommandList.h  CLGPAContext.cpp  CLGPAContext.h  CLGPAImplementor.cpp  CLGPAImplementor.h  CLGPAPass.cpp  CLGPAPass.h  CLGPASample.cpp  CLGPASample.h  CLGPASession.cpp  CLGPASession.h  CLPerfCounterAMDExtension.cpp  CLPerfCounterAMDExtension.h  CLPerfCounterBlock.cpp  CLPerfCounterBlock.h  CLRTModuleLoader.h  CMakeLists.txt  GPAContextStateCL.h  GPUPerfAPICL.cpp  GPUPerfAPICL.h  GPUPerfAPICL.rc  makefile  resource.h
Src/GPUPerfAPICounters/: CMakeLists.txt  GPUPerfAPICounters.cpp  GPUPerfAPICounters.h  GPUPerfAPICounters.rc  makefile
Src/GPUPerfAPIDX11/: CMakeLists.txt  D3D11SoftwareCounterDataRequest.cpp  D3D11SoftwareCounterDataRequest.h  DX11ComSmartPtrs.h  DX11CounterDataRequest.cpp  DX11CounterDataRequest.h  DX11GPACommandList.cpp  DX11GPACommandList.h  DX11GPAContext.cpp  DX11GPAContext.h  DX11GPAImplementor.cpp  DX11GPAImplementor.h  DX11GPAPass.cpp  DX11GPAPass.h  DX11GPASample.cpp  DX11GPASample.h  DX11GPASession.cpp  DX11GPASession.h  DX11Include.h  DX11SoftwareCounterDataRequestManager.h  DX11Utils.cpp  DX11Utils.h  DX11_PerfExperimentDataRequestHandler.cpp  DX11_PerfExperimentDataRequestHandler.h  DxxExtUtils.cpp  DxxExtUtils.h  GPAContextStateDX11.h  GPUPerfAPIDX11.cpp  GPUPerfAPIDX11.h  GPUPerfAPIDX11.rc  ICounterDataRequest.h
Src/GPUPerfAPIDX12/: CMakeLists.txt  DX12ComSmartPtrs.h  DX12CommandListSWQueryGroup.cpp  DX12CommandListSWQueryGroup.h  DX12CommandListSwQueries.cpp  DX12CommandListSwQueries.h  DX12CounterDataRequestProxy.cpp  DX12CounterDataRequestProxy.h  DX12DataRequest.cpp  DX12DataRequest.h  DX12GPACommandList.cpp  DX12GPACommandList.h  DX12GPAContext.cpp  DX12GPAContext.h  DX12GPAImplementor.cpp  DX12GPAImplementor.h  DX12GPAPass.cpp  DX12GPAPass.h  DX12GPASample.cpp  DX12GPASample.h  DX12GPASession.cpp  DX12GPASession.h  DX12HardwareCounterDataRequest.cpp  DX12HardwareCounterDataRequest.h  DX12SoftwareCounterDataRequest.cpp  DX12SoftwareCounterDataRequest.h  DX12SoftwareCountersResults.h  DX12Utils.cpp  DX12Utils.h  GPAContextStateDX12.cpp  GPAContextStateDX12.h  GPUPerfAPIDX12.cpp  GPUPerfAPIDX12.h  GPUPerfAPIDX12.rc  resource.h
Src/GPUPerfAPIGL/: ASICInfo.cpp  ASICInfo.h  CMakeLists.txt  GLAmdDriverExt.h  GLCounterDataRequest.cpp  GLCounterDataRequest.h  GLCounterDataRequestManager.cpp  GLCounterDataRequestManager.h  GLGPACommandList.cpp  GLGPACommandList.h  GLGPAContext.cpp  GLGPAContext.h  GLGPAImplementor.cpp  GLGPAImplementor.h  GLGPAPass.cpp  GLGPAPass.h  GLGPASample.cpp  GLGPASample.h  GLGPASession.cpp  GLGPASession.h  GLInclude.h  GLPerfMonitorCache.cpp  GPAContextStateGL.h  GPUPerfAPIGL.cpp  GPUPerfAPIGL.h  GPUPerfAPIGL.rc  makefile  resource.h
Src/GPUPerfAPIROCm/: CMakeLists.txt  GPUPerfAPIROCm.rc  GPUPerfAPIROCmAgent.cpp  GPUPerfAPIROCmGlobals.h  HSARTModuleLoader.h  ROCmGPACommandList.cpp  ROCmGPACommandList.h  ROCmGPAContext.cpp  ROCmGPAContext.h  ROCmGPAImplementor.cpp  ROCmGPAImplementor.h  ROCmGPAPass.cpp  ROCmGPAPass.h  ROCmGPASample.cpp  ROCmGPASample.h  ROCmGPASession.cpp  ROCmGPASession.h
Src/GPUPerfAPIUnitTests/: APIErrorTests.cpp  CMakeLists.txt  CounterGeneratorCLTests.cpp  CounterGeneratorDX11Tests.cpp  CounterGeneratorDX12Tests.cpp  CounterGeneratorGLTests.cpp  CounterGeneratorHSATests.cpp  CounterGeneratorTests.cpp  CounterGeneratorTests.h  CounterGeneratorVKTests.cpp  CounterSchedulerTests.cpp  GPAInterfaceLoaderTests.cpp  GPUPerfAPILoaderTests.cpp  makefile
Src/GPUPerfAPIVk/: CMakeLists.txt  GPAContextStateVk.cpp  GPAContextStateVk.h  GPUPerfAPIVk.cpp  GPUPerfAPIVk.h  GPUPerfAPIVk.rc  VkCommandListSWQueryGroup.cpp  VkCommandListSWQueryGroup.h  VkCommandListSwQueries.cpp  VkCommandListSwQueries.h  VkCounterDataRequestProxy.cpp  VkCounterDataRequestProxy.h  VkDataRequest.cpp  VkDataRequest.h  VkEntrypoints.cpp  VkEntrypoints.h  VkGPACommandList.cpp  VkGPACommandList.h  VkGPAContext.cpp  VkGPAContext.h  VkGPAHardwareSample.cpp  VkGPAHardwareSample.h  VkGPAImplementor.cpp  VkGPAImplementor.h  VkGPAPass.cpp  VkGPAPass.h  VkGPASample.cpp  VkGPASample.h  VkGPASession.cpp  VkGPASession.h  VkGPASoftwareSample.cpp  VkGPASoftwareSample.h  VkHardwareCounterDataRequest.cpp  VkHardwareCounterDataRequest.h  VkIncludes.h  VkSoftwareCounterDataRequest.cpp  VkSoftwareCounterDataRequest.h  VkSoftwareCountersResults.h  VkUtils.cpp  VkUtils.h  (+2 more)
Src/GoogleTest/: CMakeLists.txt
Src/PublicCounterCompilerInputFiles/: CMakeLists.txt  CounterNamesCLGfx7.txt  CounterNamesCLGfx8.txt  CounterNamesCLGfx9.txt  CounterNamesDX11Gfx6.txt  CounterNamesDX11Gfx7.txt  CounterNamesDX11Gfx8.txt  CounterNamesDX11Gfx8_Carrizo.txt  CounterNamesDX11Gfx8_Fiji.txt  CounterNamesDX11Gfx8_Tonga.txt  CounterNamesDX11Gfx9.txt  CounterNamesDX12Gfx7.txt  CounterNamesDX12Gfx8.txt  CounterNamesDX12Gfx8_Carrizo.txt  CounterNamesGLGfx7.txt  CounterNamesGLGfx8.txt  (+57 more)
docs/: CMakeLists.txt  Makefile  make.bat
source/: CMakeLists.txt
(+2001 files in other folders)
