## Copyright (C) 2025 Advanced Micro Devices, Inc. All rights reserved. ##

add_subdirectory(gpu_perf_api_common)
add_subdirectory(gpu_perf_api_counter_generator)
add_subdirectory(gpu_perf_api_counters)

if(WIN32)
    add_subdirectory(gpu_perf_api_dx)
    if(NOT ${skipdx11})
        add_subdirectory(gpu_perf_api_dx11)
    else()
        message(STATUS "Skipping DX11 in the build")
    endif()

    if(NOT ${skipdx12})
        add_subdirectory(gpu_perf_api_dx12)
    else()
        message(STATUS "Skipping DX12 in the build")
    endif()

    if(MSVC_IDE)
        if(NOT ${skipcsharp})
            add_subdirectory(public_counter_compiler)
        endif()
        add_subdirectory(public_counter_compiler_input_files)
    endif()
endif()

if(NOT ${skipopengl})
    add_subdirectory(gpu_perf_api_gl)
else()
    message(STATUS "Skipping OpenGL in the build")
endif()

if(NOT ${skipvulkan})
    add_subdirectory(gpu_perf_api_vk)
else()
    message(STATUS "Skipping Vulkan in the build")
endif()

if(NOT ${skiptests})
    add_subdirectory(gpu_perf_api_unit_tests)
else()
    message(STATUS "Skipping Tests in the build")
endif()
